--- a/carrinho.html
+++ b/carrinho.html
@@ -1,80 +1,38 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Unik Stil</title>
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="carrinho.css">
-    </head>
-    <body>
-        <header class="top-bar">
-            <div class="top-item">
-                <span class="icon">🔒</span>
-                <span class="top-text">COMPRA SEGURA</span>
-            </div>
-            <div class="top-item">
-                <span class="icon">🛻</span>
-                <span class="top-text">FRETE GRÁTIS</span>
-            </div>
-            <div class="top-item">
-                <span class="icon">💳</span>
-                <span class="top-text">PARCELE EM ATÉ 12X</span>
-            </div>
-        </header>
-        <nav class="main-menu">
-            <div class="logo">
-                UNIK <span>STIL</span>
-            </div>
-            <ul>
-                <li>
-                    <a href="index.html">INÍCIO</a>
-                </li>
-                <li>
-                    <a href="qsomos.html">PERGUNTAS FREQUENTES</a>
-                </li>
-                <li>
-                    <a href="minhaconta.html">MINHA CONTA</a>
-                </li>
-                <li>
-                    <a href="dicas.html">DICAS DE CUIDADO</a>
-                </li>
-                <li>
-                    <a href="rastreamento.html">RASTREAMENTO</a>
-                </li>
-            </ul>
-            <a href="carrinho.html">
-            <button class="cart-icon">🛒</button>
-            </a>
-        </nav>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Carrinho de Compras Lateral</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+    <button id="abrirCarrinho" class="carrinho-botao">
+        🛒 Carrinho (<span id="contadorItens">0</span>)
+    </button>
 
+    <div id="carrinhoLateral" class="carrinho-lateral">
+        <div class="carrinho-cabecalho">
+            <h2>🛍️ Seu Carrinho</h2>
+            <button id="fecharCarrinho" class="fechar-botao">X</button>
+        </div>
 
+        <div id="listaItens" class="carrinho-corpo">
+            <p id="carrinhoVazioMsg">Seu carrinho está vazio.</p>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        
-
-        <footer class="site-footer">
-    <div class="footer-container">
-        <p>UNIK STILL</p>
-        <p>Feito pelos alunos Fabiano, Thiago e Matheus - Todos os direitos reservados - 2025</p>
+        <div class="carrinho-rodape">
+            <p>Total: R$ <span id="totalCarrinho">0.00</span></p>
+            <button class="finalizar-compra">Finalizar Compra</button>
+        </div>
     </div>
-</footer>
-<script src="script.js"></script>
-</body></html>>
+
+    <div class="produto">
+        <h3>Produto Exemplo</h3>
+        <p>R$ 49.90</p>
+        <button onclick="adicionarAoCarrinho('Produto Exemplo', 49.90)">Adicionar</button>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
