--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="Captura de tela 2025-10-29 010221.png" alt="Slide 4">
             </div>
             <div class="carousel-slide fade">
-                <img src="https://via.placeholder.com/1500x500/800080/FFFFFF?text=Slide+5" alt="Slide 5">
+                <img src="Captura de tela 2025-10-29 011113.png" alt="Slide 5">
             </div>
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
