--- a/minhaconta.html
+++ b/minhaconta.html
@@ -58,6 +58,16 @@
         <button id="tabLogin" class="tab active">Login</button>
         <button id="tabRegister" class="tab">Cadastro</button>
       </div>
+      <!-- Formulário de Login -->
+      <form id="loginForm">
+        <!-- Campos de login -->
+      </form>
+      <!-- Formulário de Cadastro (inicialmente escondido) -->
+      <form id="registerForm" style="display:none;">
+        <!-- Campos de cadastro -->
+      </form>
+    </div>
+</section>
 
       <form id="loginForm" class="form">
         <input type="email" id="loginEmail" placeholder="E-mail" required="">
